<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">AduPP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">AduPP</string>
    <string name="action_aboutus">AboutUs</string>
     <string name="str_next">Next</string>
     <string name="str_prev">Previous</string>    
          <string name="str_feedback">Send FeedBack</string>
          <string name="action_special">Favourites</string>
        <string name="str_image1">ImAGE1</string>
           <string name="str_image2">ImAGE2</string>
              <string name="str_image3">ImAGE3</string>
              <string name="str_google">Google</string>
                <string name="ic_prawns">Prawns</string>
                 <string name="ic_chicken">Chicken</string>
                    <string name="ic_beef">Beef</string>
                     <string name="ic_chorl">Rice</string>
        <string name="recipe">Recipe</string>
       <string name="menu">Menu</string>
       <string name="str_request">Request Recipe</string>
          <string name="str_partner">Official Partner</string>       
       <string name="tips">Tips &amp; Tricks</string>
       <string name="Send">send</string>
       <string name="FAV">fav</string>
            <string name="str_share">Share</string>
            <string name="str_partner_name"> Nasser A.P.V</string>
            <string name="banner_ad_unit_id">ca-app-pub-6889334574849564/1400542130</string>   
            
                <string name="str_partner_det">             
              A.N.K Trading LLC,
              Dubai.
              For any carpet related enquiry Call : 00971566788949</string>
            
       
     
    
    

</resources>
