<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aduppil.adupp.MainActivity" >

    
    <item
        android:id="@+id/action_example"
		android:orderInCategory="100"
        android:title="@string/action_special"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="200"
        android:title="@string/action_aboutus"
        app:showAsAction="never"/>

        <item
        android:id="@+id/action_gallery"
        android:orderInCategory="300"
        android:title="@string/str_feedback"
        app:showAsAction="never"/>
        
        
         <item
        android:id="@+id/action_google"
        android:orderInCategory="400"
        android:title="@string/str_partner"
        app:showAsAction="never"/>
         
            <item
        android:id="@+id/action_share"
        android:orderInCategory="500"
        android:title="@string/str_share"
        app:showAsAction="never"/>
</menu>
