<?xml version="1.0" encoding="utf-8"?>
          <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/scrollView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fillViewport="true" >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" > 
     <TextView
         android:id="@+id/textPartner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/str_partner"
         android:textSize="22sp" />

     <ImageView
         android:id="@+id/imagePartner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:contentDescription="@string/str_partner"
         android:src="@drawable/partner" />

      <TextView
          android:id="@+id/textPartnerName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/str_partner_name" />
     
      <TextView
          android:id="@+id/textPartnerdet"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/str_partner_det" />


          </LinearLayout>
      </ScrollView>

