<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical" >
                

    
       <ViewFlipper
            android:id="@+id/ViewFlipper01"
            android:layout_width="fill_parent"
	    android:layout_height="400dp" >
 
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4B0082" >
 
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/str_image1"
                    android:src="@drawable/rcp_nankatta" />
                
            </RelativeLayout>
 
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#7CFC00"
                android:orientation="vertical" >
 
       <ImageView
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/str_image2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                      android:layout_centerHorizontal="true"           
                    android:src="@drawable/rcp_gulabjamun" />
                
            </RelativeLayout>
 
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1E90FF"
                android:orientation="vertical" >
 
          <ImageView
                    android:id="@+id/imageView3"
                    android:contentDescription="@string/str_image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    
                      android:layout_centerHorizontal="true"           
                    android:src="@drawable/rcp_nankatta" />
                
            </RelativeLayout>
                    </ViewFlipper>


  <RelativeLayout
        android:id="@+id/RelativeLayout03"
        
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
 
        <Button
            android:id="@+id/Previous"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_prev" >
        </Button>
 
        <Button
            android:id="@+id/Next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_next" >
        </Button>
        
    </RelativeLayout>
</LinearLayout>