<?xml version="1.0" encoding="utf-8"?>
   

      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
          android:id="@+id/recipelayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical" >
               <LinearLayout
          android:id="@+id/toplayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal" >
          
            <ImageView
              android:id="@+id/recipename"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:contentDescription="@string/str_image1"
            />

            <CheckBox
                android:id="@+id/favcheckBox"
                style="?android:attr/starStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        
         <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView>
    
             <ScrollView 
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
		android:background="@drawable/border" >
          <LinearLayout
          android:id="@+id/recipelayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

          <ImageView
              android:id="@+id/recipeimg"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:adjustViewBounds="true"
              android:layout_margin="10dp"
              android:contentDescription="@string/str_image1" />

       
          <ImageView
              android:id="@+id/recipedetail"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
              android:contentDescription="@string/str_image2"
          />

                 <LinearLayout
                     android:id="@+id/butlayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="2"
                     android:orientation="horizontal" >

                     <Button
                         android:id="@+id/buttonrequest"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:onClick="requestrecipe"
                         android:layout_weight="1"
                         android:text="@string/str_request"
                         android:visibility="invisible" />

                     <Button
                         android:id="@+id/buttontip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:onClick="tipsaudio"
                         android:text="@string/tips" />
                 </LinearLayout>
    
               </LinearLayout>    
    </ScrollView>
              
 
           

      </LinearLayout>
